--- a/soadre-core/pom.xml
+++ b/soadre-core/pom.xml
@@ -123,6 +123,11 @@
             <version>1</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.10</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
