--- a/soadre-core/pom.xml
+++ b/soadre-core/pom.xml
@@ -128,6 +128,11 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.java.net.substance</groupId>
+            <artifactId>substance</artifactId>
+            <version>6.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
